tests/transpiler/x/fs/nested_function.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/nested_function.fs(6,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (5:5). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/nested_function.fs(6,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (5:5). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/nested_function.fs(7,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (5:5). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/nested_function.fs(7,5): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (5:5). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/transpiler/x/fs/nested_function.fs(5,5): error FS0588: Block following this 'let' is unfinished. Expect an expression.
